--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/src/app.js",
     "dev": "ts-node-dev src/app.ts",
     "postinstall": "tsc",
+		"build": "tsc",
     "watch-node": "nodemon dist/src/app.js",
     "watch-ts": "tsc -w"
   },
